--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="index.html" class="active">Hem</a></li>
                     <li><a href="offers.html">Erbjudanden & Paket</a>
                     </li>
-                    <li><a href="spa.html">Spa & Relax</a>
+                    <li><a href="spa/spa.html">Spa & Relax</a>
                         <ul class="local-nav-toggle">
                             <li><a href="spa/bath.html">Bad & Bastu</a></li>
                             <li><a href="spa/relax.html">Relaxavdelning</a></li>
@@ -41,7 +41,7 @@
                     <img src="img/logo.png" alt="Nordic Calm Spa logo" class="logo">
                 </a>
                 <ul class="nav-right">
-                    <li><a href="hotel.html">Hotell</a>
+                    <li><a href="hotel/hotel.html">Hotell</a>
                     </li>
                     <li><a href="restaurant.html">Restaurang</a></li>
                     <li><a href="book.html">Boka nu</a></li>
@@ -106,7 +106,7 @@
         <section class="cta">
             <h2>Unna dig en stund av stillhet</h2>
             <p>Små stunder av harmoni och ro kan göra stor skillnad. Ge dig själv tid att bara vara.</p>
-            <a href="spa.html" class="btn">Utforska vårt spa</a>
+            <a href="spa/spa.html" class="btn">Utforska vårt spa</a>
         </section>
 
         <section class="highlights" id="popular">
@@ -159,7 +159,7 @@
             <h2>Upplev mer Nordic Calm</h2>
             <div class="explore-more">
 
-                <a href="hotel.html" class="card right-img">
+                <a href="hotel/hotel.html" class="card right-img">
                     <article>
                         <img src="img/card-hotel.jpeg" alt="Ett hotellrum utifrån sett med nordiska träd i förgrunden. I bakgrunden, innanför glasväggar syns ett badkar och en säng.">
                         <div class="explore-more-text">
@@ -234,8 +234,8 @@
                 <ul class="footer-nav">
                     <li><a href="index.html" class="active">Hem</a></li>
                     <li><a href="offers.html">Erbjudanden / Paket</a></li>
-                    <li><a href="spa.html">Spa & Relax</a></li>
-                    <li><a href="hotel.html">Hotell</a></li>
+                    <li><a href="spa/spa.html">Spa & Relax</a></li>
+                    <li><a href="hotel/hotel.html">Hotell</a></li>
                     <li><a href="restaurant.html">Restaurang</a></li>
                     <li><a href="book.html">Boka nu</a></li>
                     <li><a href="contact.html">Kontakt & FAQ</a></li>
