--- a/rapport/rapport.html
+++ b/rapport/rapport.html
@@ -269,6 +269,18 @@
                 <h3>- med metoden "Tänka högt" (Thinking Out Loud)</h3>
                 <!-- Endast för VG. Har du inte utfört användartest, tar du bort detta avsnitt (hela section-elementet). -->
                 <!-- Beskriv hur du genomförde användartestet. Ange vilka brister du upptäckte och hur du åtgärdat dem. -->
+                 <h3>Erica</h3>
+                 <ul class="req">
+                    <li>Gör artiklar med hover klickbara</li>
+                    <li>Ta bort hover på artiklar med all info</li>
+                    <li>Aningen små inputfält</li>
+                    <li>Gör informationen i sidenote tydligare</li>
+                    <li>Byt namn på 'Spa utan övernattning' till 'Dagsspa' för mindre repetition</li>
+                    <li>Kategorier i FAQ</li>
+                    <li>Info om laddning för elbil</li>
+                    <li>Saknar tillval till rummet - ex fruktbricka/vin</li>
+                    <li>Saknar mer information om rummen</li>
+                 </ul>
                 <p>...</p>
             </section>
             <section id="references">
