--- a/spa/bath.html
+++ b/spa/bath.html
@@ -28,7 +28,7 @@
                     <li><a href="../index.html">Hem</a></li>
                     <li><a href="../offers.html">Erbjudanden & Paket</a>
                     </li>
-                    <li><a href="../spa.html">Spa & Relax</a>
+                    <li><a href="spa.html">Spa & Relax</a>
                         <ul class="local-nav-toggle">
                         <li><a href="bath.html" class="active">Bad & Bastu</a></li>
                     <li><a href="relax.html">Relaxavdelning</a></li>
@@ -41,7 +41,7 @@
                     <img src="../img/logo.png" alt="Nordic Calm Spa logo" class="logo">
                 </a>
                 <ul class="nav-right">
-                    <li><a href="../hotel.html">Hotell</a>
+                    <li><a href="../hotel/hotel.html">Hotell</a>
                     </li>
                     <li><a href="../restaurant.html">Restaurang</a></li>
                     <li><a href="../book.html">Boka nu</a></li>
@@ -77,115 +77,79 @@
 
         <section class="intro">
             <h2>En resa genom värme och kyla</h2>
-            <p>Vår bad- och bastuavdelning är skapad för att stimulera alla sinnen. Här vandrar du fritt mellan heta bastur, svala källor och tystnadens rum – i din egen takt.</p>
+            <p>Vår bad- och bastuavdelning stimulerar alla sinnen. Vandra mellan heta bastur, svala källor och tystnadens rum – i din egen takt.</p>
         </section>
 
         <section id="ritual" class="spa-section">
             <div class="ritual-wrapper">
                 <h2>Den lugnande inledningen</h2>
                 <p>Din spaupplevelse startar i ett stilla rum där fokus ligger på dig och ditt välbefinnande. Här får du en stund att landa, andas djupt och släppa vardagens brus. Denna inledande stund fungerar som en mjuk övergång in i spavistelsen och förbereder både kropp och sinne på det som komma skall.</p>
+                <br>
                 <h3>Ritual</h3>
                 <p>Sätt dig bekvämt, känn tyngden i kroppen och låt andetagen bli långsamma och djupa. Tystnaden och de subtila dofterna omsluter dig medan sinnena mjuknar. När du lämnar rummet har du skapat utrymme för ro, närvaro och total avkoppling.</p>
             </div>
         </section>
 
-        <section id="pools" class="spa-section">
-            <h2>Pooler</h2>
-            <div class="spa-grid">
-                <article class="pool">
-                    <h3>Värmekällan</h3>
-                    <p>Här bubblar vattnet mjukt runt dig och värmer kroppen. Ett perfekt ställe att sakta sjunka ner och låta spänningar smälta bort.</p>
-                </article>
+        <section class="bath-highlights">
+        <div class="bath-category" id="bath-hot">
+            <div class="bath-category-text">
+            <h2>Varma källor & bastur</h2>
+            <p>Inomhus kan du njuta av varma omslutande pooler och mjuka bastur. Känn hur vattnet värmer kroppen och hur dofter och belysning skapar lugn och ro. Här finns böand annat en varm inomhuspool med ånga, en torrbastu med kryddig doft och en ångbastu med Himalayasalt.</p>
+        </div>
+        </div>
 
-                <article class="pool">
-                    <h3>Dimviken</h3>
-                    <p>En varm inomhuspool där ångan svävar över ytan och skapar ett drömlikt dis. Här döljs världen utanför och du får uppleva total stillhet i ett mjukt, omslutande ljus.</p>
-                </article>
+        <div class="bath-category" id="bath-cold">
+            <div class="bath-category-text">
+            <h2>Kalla källor & kontraster</h2>
+            <p>Växla mellan värme och kyla med våra kontrastpooler, regnduschar och iskalla vattenfall. Den uppfriskande kylan väcker kroppen och ökar cirkulationen, vilket ger ny energi.</p>
+        </div>
+        </div>
 
-                <article class="pool">
-                    <h3>Stenbädden</h3>
-                    <p>Vattnet vilar mot släta stenar som värmer kroppen inifrån. Här kan du luta dig tillbaka, känna tyngden sjunka undan och låta tankarna stanna upp.</p>
-                </article>
-
-                <article class="pool">
-                    <h3>Mossgrottan</h3>
-                    <p>Med dämpad belysning, milda dofter och gröna toner känns det som att flyta mitt i en stilla skog. Låt ögon och sinne vila medan vattnet omsluter dig i denna lugna och naturliga miljö.</p>
-                </article>
-
-                <article class="pool">
-                    <h3>Källfallet</h3>
-                    <p>Vattnet porlar fram ur stenen som en evig källa. Ljudet från flödet blir som ett naturligt mantra, perfekt för stillhet och mental återhämtning.</p>
-                </article>
-
-                <article class="pool">
-                    <h3>Solgläntan</h3>
-                    <p>Vattnet håller behaglig temperatur året om, färgsättning och ljud av naturen skapar en känsla av evig sommar. Luta dig tillbaka och låt vardagen rinna av dig.</p>
-                </article>
-                <article class="pool">
-                    <h3>Saltkällan</h3>
-                    <p>En plats för själen att vila. I det varma, mineralrika vattnet blir du viktlös. Du flyter, andas, och låter tankarna sjunka till botten. Här finns bara du och det djupa lugnet.</p>
-                </article>
-                <article class="pool">
-                    <h3>Källsprånget</h3>
-                    <p>En liten, uppfriskande pool med mild ström i vattnet – perfekt för lätt simning eller att låta kroppen få massage av vattnets rörelse.</p>
-                </article>
-
-                <article class="pool">
-                    <h3>Frostkällan</h3>
-                    <p>En kraftfull kontrastpool – kallt, klart vatten som väcker kroppen. Perfekt för att öka cirkulation och känna sig levande efter varma bad eller bastu.</p>
-                </article>
-            </div>
-        </section>
-
-        <section id="saunas" class="spa-section">
-            <h2>Bastur</h2>
-            <div class="spa-grid">
-                <article class="sauna">
-                    <h3>Kryddig stillhet</h3>
-                    <p>En traditionell varm torrbastu på 75 °C med träpaneler och mjuk belysning. Den lätt kryddiga doften av kanel fyller rummet och skapar en varm, omfamnande atmosfär där kroppen sakta slappnar av och sinnet finner ro. Perfekt för en stunds stillhet och avkoppling.</p>
-                </article>
-
-                <article class="sauna">
-                    <h3>Tvåsamheten</h3>
-                    <p>En bastu för två med vilosängar i trä. Mild temperatur, ca 50–52 °C och doft av tall och kryddnejlika. Här kan ni tillsammans njuta av värme, doft och lugn i total avskildhet.</p>
-                </article>
-
-                <article class="sauna">
-                    <h3>Stenlunden</h3>
-                    <p>Naturstensbastu med varma stenbänkar och mild lavendeldoft som sprider lugn. Temperaturen är ca 62 °C. Luta dig mot de varma stenarna, lyssna på porlande vatten och låt aromen fylla sinnena – en stund för kropp och själ att landa.</p>
-                </article>
-
-                <article class="sauna">
-                    <h3>Skogsro</h3>
-                    <p>Naturlig belysning och doft av mossa och tall omsluter dig i denna bastu med mild temperatur. Träväggarna och naturinspirerade detaljer gör att du känner dig som om du befinner dig mitt i en stilla skog. Kropp och sinne får en paus från vardagens brus.</p>
-                </article>
-
-                <article class="sauna">
-                    <h3>Himalaya</h3>
-                    <p>Ångbastu med Himalayasalt och mineraler som stärker kropp och sinne. Temperaturen ligger runt 48 °C och ångan omsluter dig med doft av citron och tea tree. Vattnets mineraler renar luftrör och ger en känsla av viktlös, meditativ avkoppling.</p>
-                </article>
-
-                <article class="sauna">
-                    <h3>Iskammaren</h3>
-                    <p>Här möts kroppen av isande luft och en sval doft av eukalyptus. Kroppen får en energigivande chock medan sinnena vaknar till liv.</p>
-                </article>
-            </div>
-        </section>
-
-        <section id="outdoor" class="spa-section">
-            <h2>Utomhusbad & Bastur</h2>
+        <div class="bath-category" id="bath-out">
+            <div class="bath-category-text">
+            <h2>Utomhusbad & upplevelser</h2>
             <p>Njut av frisk luft och naturens stillhet i våra utomhuspooler och bastur med utsikt mot skog och sjö. Värmen möter kylan i en perfekt balans.</p>
+        </div>
+        </div>
         </section>
 
-        <section id="shower" class="spa-section">
-            <h2>Dusch & avkylning</h2>
-            <p>Avsluta eller växla mellan baden med våra uppfriskande regnduschar eller iskalla vattenfall – för att väcka kroppens cirkulation och ge ny energi.</p>
-        </section>
+        <section class="highlights" id="popular">
+            <h2>Våra mest bokade paket</h2>
+            <div class="cards popular">
+                <article>
+                    <a href="../offers.html#harmony-for-two">
+                    <div class="img-wrapper">
+                            <img src="../img/card-harmony-for-two.jpeg" alt="En brasa, ett bord med chark och vin. I förgrunden skymtas ett par i ofokus på var sida av bilden.">
+                            <div class="text-overlay">
+                                <h3>Harmony for Two</h3>
+                                <p>Romantik för två – vårt mest uppskattade paket.</p>
+                            </div>
+                        </div>
+                    </a>
+                </article>
 
-        <section id="offers-preview" class="spa-section">
-            <h2>Utvalda erbjudanden</h2>
-            <div class="cards">
-                <h3>Calm Spa Weekend</h3>
+                <article>
+                    <a href="../offers.html#evening-serenity">
+                    <div class="img-wrapper">
+                            <img src="../img/card-evening-serenity.jpeg" alt="En tallrik med mat som ställs fram på ett bord.">
+                            <div class="text-overlay">
+                                <h3>Evening Serenity</h3>
+                                <p>Spa, middag och stillhet i kvällsljus..</p>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+                <article>
+                    <a href="../offers.html#calm-spa-weekend">
+                    <div class="img-wrapper">
+                            <img src="../img/card-calm-spa-weekend.jpeg" alt="En kvinna bakifrån som sitter i en pool med armbågarna upp på kanten.">
+                            <div class="text-overlay">
+                                <h3>Calm Spa Weekend</h3>
+                                <p>Två dagar av total ro och njutning.</p>
+                            </div>
+                        </div>
+                    </a>
+                </article>
             </div>
         </section>
 
@@ -202,12 +166,12 @@
             <div class="footer-navigation">
                 <h3>Snabblänkar</h3>
                 <ul class="footer-nav">
-                    <li><a href="index.html">Hem</a></li>
-                    <li><a href="offers.html">Erbjudanden / Paket</a></li>
+                    <li><a href="../index.html">Hem</a></li>
+                    <li><a href="../offers.html">Erbjudanden / Paket</a></li>
                     <li><a href="spa.html">Spa & Relax</a></li>
-                    <li><a href="hotel.html">Hotell</a></li>
-                    <li><a href="restaurant.html">Restaurang</a></li>
-                    <li><a href="book.html">Boka nu</a></li>
+                    <li><a href="../hotel/hotel.html">Hotell</a></li>
+                    <li><a href="../restaurant.html">Restaurang</a></li>
+                    <li><a href="../book.html">Boka nu</a></li>
                     <li><a href="../contact.html">Kontakt & FAQ</a></li>
                 </ul>
             </div>
@@ -246,7 +210,7 @@
         © 2025 Nordic Calm Spa
     </div>
         <div class="transition">
-            <a href="rapport/rapport.html" target="_blank">Projektrapport</a>
+            <a href="../rapport/rapport.html" target="_blank">Projektrapport</a>
       
     </div>
     </footer>
