--- a/spa/spa.html
+++ b/spa/spa.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Låt stillheten omfamna dig på Nordic Calm Spa. Njut av varma bad, doftande bastur och avslappnande behandlingar - en harmonisk oas för kropp och själ.">
     <meta name="keywords" content="spa, spaweekend, hotell, bastu, massage, relax, wellness, dagsspa, behandlingar, hälsa, rogivande, nordic calm spa">
     <title>Nordic Calm Spa</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
@@ -25,33 +25,33 @@
             </label>
             <div class="nav-wrapper">
                 <ul class="nav-left">
-                    <li><a href="index.html">Hem</a></li>
-                    <li><a href="offers.html">Erbjudanden & Paket</a>
+                    <li><a href="../index.html">Hem</a></li>
+                    <li><a href="../offers.html">Erbjudanden & Paket</a>
                     </li>
                     <li><a href="spa.html" class="active">Spa & Relax</a>
                         <ul class="local-nav-toggle">
-                            <li><a href="spa/bath.html">Bad & Bastu</a></li>
-                            <li><a href="spa/relax.html">Relaxavdelning</a></li>
-                            <li><a href="spa/treatments.html">Behandlingar</a></li>
+                            <li><a href="bath.html">Bad & Bastu</a></li>
+                            <li><a href="relax.html">Relaxavdelning</a></li>
+                            <li><a href="treatments.html">Behandlingar</a></li>
                         </ul>
                     </li>
                 </ul>
 
-                <a href="index.html" class="logo-link">
-                    <img src="img/logo.png" alt="Nordic Calm Spa logo" class="logo">
+                <a href="../index.html" class="logo-link">
+                    <img src="../img/logo.png" alt="Nordic Calm Spa logo" class="logo">
                 </a>
                 <ul class="nav-right">
-                    <li><a href="hotel.html">Hotell</a>
+                    <li><a href="../hotel/hotel.html">Hotell</a>
                     </li>
-                    <li><a href="restaurant.html">Restaurang</a></li>
-                    <li><a href="book.html">Boka nu</a></li>
+                    <li><a href="../restaurant.html">Restaurang</a></li>
+                    <li><a href="../book.html">Boka nu</a></li>
                 </ul>
             </div>
             <nav class="local-nav">
                 <ul>
-                    <li><a href="spa/bath.html">Bad & Bastu</a></li>
-                    <li><a href="spa/relax.html">Relaxavdelning</a></li>
-                    <li><a href="spa/treatments.html">Behandlingar</a></li>
+                    <li><a href="bath.html">Bad & Bastu</a></li>
+                    <li><a href="relax.html">Relaxavdelning</a></li>
+                    <li><a href="treatments.html">Behandlingar</a></li>
                 </ul>
             </nav>
         </nav>
@@ -62,30 +62,30 @@
         <section class="hero hero-spa">
             <picture>
                 <!-- MOBILE VERSION -->
-                <source media="(max-width: 600px)" srcset="img/hero-spa-mobile.jpeg">
+                <source media="(max-width: 600px)" srcset="../img/hero-spa-mobile.jpeg">
                 <!-- DESKTOP VERSION -->
-                <source media="(min-width: 601px)" srcset="img/hero-spa-desktop.jpeg">
+                <source media="(min-width: 601px)" srcset="../img/hero-spa-desktop.jpeg">
                 <!-- FALLBACK -->
-                <img src="img/hero-spa-desktop.jpeg" alt="Spa-pool inomhus med stora fönster och frostig skog i bakgrunden, en kvinna med morgonrock sitter i en solsäng vid fönstren.">
+                <img src="../img/hero-spa-desktop.jpeg" alt="Spa-pool inomhus med stora fönster och frostig skog i bakgrunden, en kvinna med morgonrock sitter i en solsäng vid fönstren.">
             </picture>
             <div class="hero-text">
                 <h1>Spa & Relax</h1>
                 <p>Släpp vardagen och låt kroppen vila - vi tar hand om dig med nordisk värme och omtanke. Här kan du stanna upp, andas och ta hand om dig själv – precis som du förtjänar.</p>
-                <a href="offers.html" class="btn">Utforska våra paket</a>
+                <a href="../offers.html" class="btn">Utforska våra paket</a>
             </div>
         </section>
 
         <section class="highlights">
             <h2>Behandlingar & upplevelser</h2>
             <div class="cards">
-                <a href="spa/treatments.html#body">
+                <a href="treatments.html#body">
                     <article>
                         <img src="../img/card-body.jpeg" alt="Närbild på händer som masserar en rygg.">
                         <h3>Massage & kroppsbehandlingar</h3>
                         <p>Djupgående, avslappnande eller aroma – våra terapeuter anpassar varje massage efter dina behov för att lösa upp spänningar och återställa balansen.</p>
                     </article>
                 </a>
-                <a href="spa/treatments.html#face">
+                <a href="treatments.html#face">
                     <article>
                         <img src="../img/card-face.jpeg" alt="Närbild av person med svart ansiktsmask som får ansiktbehandling.">
                         <h3>Ansiktsbehandlingar</h3>
@@ -111,24 +111,24 @@
         <section class="cta">
             <h2>Unna dig egentid</h2>
             <p>Vare sig du söker ny energi eller djup avslappning finns en behandling som passar dig. Välkommen att uppleva vår värld av lugn, doft och värme.</p>
-            <a href="book.html" class="btn">Boka din stund av ro</a>
+            <a href="../book.html" class="btn">Boka din stund av ro</a>
         </section>
 
     </main>
 
     <!-- ==================== FOOTER ==================== -->
-          <footer>
+    <footer>
         <div class="footer-content">
             <div class="footer-navigation">
                 <h3>Snabblänkar</h3>
                 <ul class="footer-nav">
-                    <li><a href="index.html">Hem</a></li>
-                    <li><a href="offers.html">Erbjudanden / Paket</a></li>
+                    <li><a href="../index.html">Hem</a></li>
+                    <li><a href="../offers.html">Erbjudanden / Paket</a></li>
                     <li><a href="spa.html" class="active">Spa & Relax</a></li>
-                    <li><a href="hotel.html">Hotell</a></li>
-                    <li><a href="restaurant.html">Restaurang</a></li>
-                    <li><a href="book.html">Boka nu</a></li>
-                    <li><a href="contact.html">Kontakt & FAQ</a></li>
+                    <li><a href="../hotel/hotel.html">Hotell</a></li>
+                    <li><a href="../restaurant.html">Restaurang</a></li>
+                    <li><a href="../book.html">Boka nu</a></li>
+                    <li><a href="../contact.html">Kontakt & FAQ</a></li>
                 </ul>
             </div>
             <div class="footer-info">
@@ -137,15 +137,15 @@
                 <p>E-post: info@nordiccalmspa.se</p>
                 <p>Adress: Tallgläntan 3, 791 92 Falun</p>
                 <div class="socials">
-                <a href="https://www.facebook.com" target="_blank">
-                <i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
-                <a href="https://www.instagram.com" target="_blank">
-                <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.linkedin.com" target="_blank">
-                <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
-                </a>
-            </div>
+                    <a href="https://www.facebook.com" target="_blank">
+                        <i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank">
+                        <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
+                    </a>
+                </div>
                 <p><strong>Öppettider</strong></p>
                 <p>Hotell/reception: 06:00–00:00</p>
                 <p>Spa & Relax: 07:00–22:00</p>
@@ -163,12 +163,12 @@
             </div>
         </div>
         <div class="footer-end">
-        © 2025 Nordic Calm Spa
-    </div>
+            © 2025 Nordic Calm Spa
+        </div>
         <div class="transition">
-            <a href="rapport/rapport.html" target="_blank">Projektrapport</a>
-      
-    </div>
+            <a href="../rapport/rapport.html" target="_blank">Projektrapport</a>
+
+        </div>
     </footer>
 </body>
 
