--- a/book.html
+++ b/book.html
@@ -28,7 +28,7 @@
                     <li><a href="index.html">Hem</a></li>
                     <li><a href="offers.html">Erbjudanden & Paket</a>
                     </li>
-                    <li><a href="spa.html">Spa & Relax</a>
+                    <li><a href="spa/spa.html">Spa & Relax</a>
                         <ul class="local-nav-toggle">
                             <li><a href="spa/bath.html">Bad & Bastu</a></li>
                             <li><a href="spa/relax.html">Relaxavdelning</a></li>
@@ -41,7 +41,7 @@
                     <img src="img/logo.png" alt="Nordic Calm Spa logo" class="logo">
                 </a>
                 <ul class="nav-right">
-                    <li><a href="hotel.html">Hotell</a>
+                    <li><a href="hotel/hotel.html">Hotell</a>
                     </li>
                     <li><a href="restaurant.html">Restaurang</a></li>
                     <li><a href="book.html" class="active">Boka nu</a></li>
@@ -97,45 +97,52 @@
 
                         <div class="form-section treatment">
                             <label for="treatment" id="treatment-heading">Välj behandling:</label>
-                            <select name="treatment">
-                                <option value="" selected>Välj ett alternativ</option>
-                                <optgroup label="Massage & kroppsbehandlingar">
-                                    <option>Ansikts- & skalpmassage, 30 min</option>
-                                    <option>Antistress Treatment, 60 min</option>
-                                    <option>Aromaterapi Antistress, 60 min</option>
-                                    <option>Body & Face Ritual, 90 min</option>
-                                    <option>Duo Deluxe, 90 min</option>
-                                    <option>Fot & Ben Retreat, 30 min</option>
-                                    <option>Fot & Ben Retreat, 45 min</option>
-                                    <option>Gravid Ritual, 90 min</option>
-                                    <option>Grön Spa Ritual, 75 min</option>
-                                    <option>Hot Stone Massage, 60 min</option>
-                                    <option>Hot Stone Massage, 90 min</option>
-                                    <option>Idrottsmassage, 45 min</option>
-                                    <option>Idrottsmassage, 60 min</option>
-                                    <option>Klassisk Helkroppsmassage, 60 min</option>
-                                    <option>Klassisk Helkroppsmassage, 90 min</option>
-                                    <option>Rygg- & nackmassage, 30 min</option>
-                                    <option>Rygg- & nackmassage, 45 min</option>
-                                </optgroup>
+                        <select name="treatment" id="treatment">
+                            <option value="" selected>Välj ett alternativ</option>
+                            <optgroup label="Ritualer & signaturbehandlingar">
 
-                                <optgroup label="Ansiktsbehandling">
-                                    <option>Arctic Ritual</option>
-                                    <option>Deep Detox</option>
-                                    <option>Hydra Boost</option>
-                                    <option>Nordic Glow</option>
-                                    <option>Pure Calm</option>
-                                    <option>Timeless Beauty</option>
-                                </optgroup>
-                            </select>
+                                <option>Antistress Treatment, 60 min</option>
+                                <option>Aroma Balance, 60 min</option>
+                                <option>Body & Face Ritual, 90 min</option>
+                                <option>Deep Recovery, 45 min</option>
+                                <option>Deep Recovery, 60 min</option>
+                                <option>Duo Deluxe, 90 min</option>
+                                <option>Grön Spa Ritual, 75 min</option>
+                                <option>Mother's Touch, 90 min</option>
+                                <option>Hot Stone Harmony, 60 min</option>
+                                <option>Hot Stone Harmony, 90 min</option>
+                            </optgroup>
+                            <optgroup label="Klassiska massagebehandlingar">
+                                <option>Ansikts- & skalpmassage, 30 min</option>
+                                <option>Fot & Ben Retreat, 30 min</option>
+                                <option>Fot & Ben Retreat, 45 min</option>
+                                <option>Klassisk Helkroppsmassage, 60 min</option>
+                                <option>Klassisk Helkroppsmassage, 90 min</option>
+                                <option>Rygg- & nackmassage, 30 min</option>
+                                <option>Rygg- & nackmassage, 45 min</option>
+                            </optgroup>
+                            <optgroup label="Ansiktsbehandling">
+                                <option>Arctic Ritual, 80 min</option>
+                                <option>Deep Detox, 70 min</option>
+                                <option>Hydra Boost, 75 min</option>
+                                <option>Nordic Glow, 60 min</option>
+                                <option>Pure Calm, 50 min</option>
+                                <option>Timeless Beauty, 75 min</option>
+                            </optgroup>
+                        </select>
                         </div>
                         <div class="form-section package">
                             <label for="package" id="package-heading">Välj paket:</label>
 
                             <select name="package">
                                 <option value="" selected>Välj ett alternativ</option>
+                                <optgroup label="Aktuella erbjudanden">
+                                    <option>Sunday Reset – 2 för 1</option>
+                                    <option>Mindful Detox</option>
+                                    <option>Spa & Sip</option>
+                                </optgroup>
 
-                                <optgroup label="Dagspaket">
+                                <optgroup label="Dagsspa">
                                     <option>Morning Glow</option>
                                     <option>Lunch Break</option>
                                     <option>Evening Serenity</option>
@@ -143,7 +150,7 @@
                                     <option>Spaentré</option>
                                 </optgroup>
 
-                                <optgroup label="Boendepaket">
+                                <optgroup label="Spa med övernattning">
                                     <option>Sunday Reset</option>
                                     <option>Calm Spa Weekend</option>
                                     <option>Nordic Silence</option>
@@ -179,8 +186,8 @@
                 <ul class="footer-nav">
                     <li><a href="index.html">Hem</a></li>
                     <li><a href="offers.html">Erbjudanden / Paket</a></li>
-                    <li><a href="spa.html">Spa & Relax</a></li>
-                    <li><a href="hotel.html">Hotell</a></li>
+                    <li><a href="spa/spa.html">Spa & Relax</a></li>
+                    <li><a href="hotel/hotel.html">Hotell</a></li>
                     <li><a href="restaurant.html">Restaurang</a></li>
                     <li><a href="book.html" class="active">Boka nu</a></li>
                     <li><a href="contact.html">Kontakt & FAQ</a></li>
