--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                     <li><a href="index.html">Hem</a></li>
                     <li><a href="offers.html">Erbjudanden & Paket</a>
                     </li>
-                    <li><a href="spa.html">Spa & Relax</a>
+                    <li><a href="spa/spa.html">Spa & Relax</a>
                         <ul class="local-nav-toggle">
                             <li><a href="spa/bath.html">Bad & Bastu</a></li>
                             <li><a href="spa/relax.html">Relaxavdelning</a></li>
@@ -41,7 +41,7 @@
                     <img src="img/logo.png" alt="Nordic Calm Spa logo" class="logo">
                 </a>
                 <ul class="nav-right">
-                    <li><a href="hotel.html">Hotell</a>
+                    <li><a href="hotel/hotel.html">Hotell</a>
                     </li>
                     <li><a href="restaurant.html">Restaurang</a></li>
                     <li><a href="book.html">Boka nu</a></li>
@@ -169,8 +169,8 @@
                 <ul class="footer-nav">
                     <li><a href="index.html">Hem</a></li>
                     <li><a href="offers.html">Erbjudanden / Paket</a></li>
-                    <li><a href="spa.html">Spa & Relax</a></li>
-                    <li><a href="hotel.html">Hotell</a></li>
+                    <li><a href="spa/spa.html">Spa & Relax</a></li>
+                    <li><a href="hotel/hotel.html">Hotell</a></li>
                     <li><a href="restaurant.html">Restaurang</a></li>
                     <li><a href="book.html">Boka nu</a></li>
                     <li><a href="#contact" class="active">Kontakt & FAQ</a></li>
