--- a/hotel/hotel.html
+++ b/hotel/hotel.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Låt stillheten omfamna dig på Nordic Calm Spa. Njut av varma bad, doftande bastur och avslappnande behandlingar - en harmonisk oas för kropp och själ.">
     <meta name="keywords" content="spa, spaweekend, hotell, bastu, massage, relax, wellness, dagsspa, behandlingar, hälsa, rogivande, nordic calm spa">
     <title>Nordic Calm Spa</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
@@ -25,26 +25,26 @@
             </label>
             <div class="nav-wrapper">
                 <ul class="nav-left">
-                    <li><a href="index.html">Hem</a></li>
-                    <li><a href="offers.html">Erbjudanden & Paket</a>
+                    <li><a href="../index.html">Hem</a></li>
+                    <li><a href="../offers.html">Erbjudanden & Paket</a>
                     </li>
-                    <li><a href="spa.html">Spa & Relax</a>
+                    <li><a href="../spa/spa.html">Spa & Relax</a>
                         <ul class="local-nav-toggle">
-                            <li><a href="spa/bath.html">Bad & Bastu</a></li>
-                            <li><a href="spa/relax.html">Relaxavdelning</a></li>
-                            <li><a href="spa/treatments.html">Behandlingar</a></li>
+                            <li><a href="../spa/bath.html">Bad & Bastu</a></li>
+                            <li><a href="../spa/relax.html">Relaxavdelning</a></li>
+                            <li><a href="../spa/treatments.html">Behandlingar</a></li>
                         </ul>
                     </li>
                 </ul>
 
-                <a href="index.html" class="logo-link">
-                    <img src="img/logo.png" alt="Nordic Calm Spa logo" class="logo">
+                <a href="../index.html" class="logo-link">
+                    <img src="../img/logo.png" alt="Nordic Calm Spa logo" class="logo">
                 </a>
                 <ul class="nav-right">
                     <li><a href="hotel.html" class="active">Hotell</a>
                     </li>
-                    <li><a href="restaurant.html">Restaurang</a></li>
-                    <li><a href="book.html">Boka nu</a></li>
+                    <li><a href="../restaurant.html">Restaurang</a></li>
+                    <li><a href="../book.html">Boka nu</a></li>
                 </ul>
             </div>
         </nav>
@@ -55,11 +55,11 @@
         <section class="hero hero-hotel">
             <picture>
                 <!-- MOBILE VERSION -->
-                <source media="(max-width: 600px)" srcset="img/card-hotel.jpeg">
+                <source media="(max-width: 600px)" srcset="../img/card-hotel.jpeg">
                 <!-- DESKTOP VERSION -->
-                <source media="(min-width: 601px)" srcset="img/hero-hotel-desktop.jpeg">
+                <source media="(min-width: 601px)" srcset="../img/hero-hotel-desktop.jpeg">
                 <!-- FALLBACK -->
-                <img src="img/hero-hotel-desktop.jpeg" alt="En hotellobby med dov belysning och mjuka färger. En fotölj i läder är i fokus.">
+                <img src="../img/hero-hotel-desktop.jpeg" alt="En hotellobby med dov belysning och mjuka färger. En fotölj i läder är i fokus.">
             </picture>
             <div class="hero-text">
                 <h1>Nordic Calm Hotel</h1>
@@ -75,36 +75,46 @@
         <section class="highlights hotel">
             <h2 class="visually-hidden">Våra rum</h2>
             <div class="cards room">
+
                 <article class="room">
-                    <img src="img/card-standard.jpeg" alt="Närbild på en bäddad hotellsäng med sänggavel i naturträ">
+                    <a href="standard.html">
+                    <img src="../img/card-standard.jpeg" alt="Närbild på en bäddad hotellsäng med sänggavel i naturträ">
                     <h3>Standard</h3>
                     <p>Våra stilrena standardrum erbjuder en avslappnad atmosfär och allt du behöver för en rofylld vistelse.</p>
+                </a>
                 </article>
-                <article class="room">
-                    <img src="img/card-deluxe.jpeg" alt="En bäddad hotellsäng, ett badkar och stora glaspartier med skog utanför i bakgrunden">
-                    <h3>Deluxe</h3>
 
-                    <p>Ett rymligt rum med badkar, skogsutsikt och en inredning inspirerad av skandinavisk enkelhet och elegans.</p>
-                </article>
                 <article class="room">
-                    <img src="img/card-suite.jpeg" alt="Ett hotellrum utifrån sett med nordiska träd i förgrunden. I bakgrunden, innanför glasväggar syns ett badkar och en säng.">
+                    <a href="deluxe.html">
+                    <img src="../img/card-deluxe.jpeg" alt="En bäddad hotellsäng, ett badkar och stora glaspartier med skog utanför i bakgrunden">
+                    <h3>Deluxe</h3>
+                    <p>Ett rymligt rum med badkar, skogsutsikt och en inredning inspirerad av skandinavisk enkelhet och elegans.</p>
+                    </a>
+                </article>
+
+                <article class="room">
+                    <a href="suite.html">
+                    <img src="../img/card-suite.jpeg" alt="Ett hotellrum utifrån sett med nordiska träd i förgrunden. I bakgrunden, innanför glasväggar syns ett badkar och en säng.">
                     <h3>Suite</h3>
                     <p>Vår mest exklusiva upplevelse – generösa ytor, jacuzzi på rummet och privat bastu med panoramavy över vattnet.</p>
+                    </a>
                 </article>
+
             </div>
         </section>
 
         <section class="cta">
             <h2>Vill du boka ett paket eller en behandling?</h2>
             <p>Utforska våra spapaket och behandlingar, och skicka din bokningsförfrågan via sidan.</p>
-            <a href="spa.html" class="btn">Till Nordic Calm Spa</a>
+            <a href="../spa/spa.html" class="btn">Till Nordic Calm Spa</a>
         </section>
 
         <section class="hotel-form" id="book-hotel">
             <div class="booking">
                 <h2>Nordic Calm Hotel
                     <br>
-                    Bokningsförfrågan</h2>
+                    Bokningsförfrågan
+                </h2>
                 <p class="form-note">Vi bekräftar din bokning via e-post inom 24 timmar.</p>
                 <form name="hotel" method="POST" data-netlify="true" data-netlify-honeypot="bot-field">
                     <input type="hidden" name="form-name" value="contact">
@@ -151,44 +161,49 @@
 
                     <div class="subject">
                         <label id="subject-heading">Vill du lägga till något i din bokning?</label>
+
                         <input type="radio" id="radio-treatment" name="type" value="treatment">
                         <label for="radio-treatment">Behandling</label>
 
                         <input type="radio" id="radio-package" name="type" value="package">
                         <label for="radio-package">Paket</label>
 
+                        <input type="radio" id="radio-extra" name="type" value="extra">
+                        <label for="radio-extra">Tillval</label>
+
                         <div class="form-section treatment">
                             <label for="treatment" id="treatment-heading">Välj behandling:</label>
-                            <select name="treatment">
+                            <select name="treatment" id="treatment">
                                 <option value="" selected>Välj ett alternativ</option>
+                                <optgroup label="Ritualer & signaturbehandlingar">
 
-                                <optgroup label="Massage & kroppsbehandlingar">
-                                    <option>Ansikts- & skalpmassage, 30 min</option>
                                     <option>Antistress Treatment, 60 min</option>
-                                    <option>Aromaterapi Antistress, 60 min</option>
+                                    <option>Aroma Balance, 60 min</option>
                                     <option>Body & Face Ritual, 90 min</option>
+                                    <option>Deep Recovery, 45 min</option>
+                                    <option>Deep Recovery, 60 min</option>
                                     <option>Duo Deluxe, 90 min</option>
+                                    <option>Grön Spa Ritual, 75 min</option>
+                                    <option>Mother's Touch, 90 min</option>
+                                    <option>Hot Stone Harmony, 60 min</option>
+                                    <option>Hot Stone Harmony, 90 min</option>
+                                </optgroup>
+                                <optgroup label="Klassiska massagebehandlingar">
+                                    <option>Ansikts- & skalpmassage, 30 min</option>
                                     <option>Fot & Ben Retreat, 30 min</option>
                                     <option>Fot & Ben Retreat, 45 min</option>
-                                    <option>Gravid Ritual, 90 min</option>
-                                    <option>Grön Spa Ritual, 75 min</option>
-                                    <option>Hot Stone Massage, 60 min</option>
-                                    <option>Hot Stone Massage, 90 min</option>
-                                    <option>Idrottsmassage, 45 min</option>
-                                    <option>Idrottsmassage, 60 min</option>
                                     <option>Klassisk Helkroppsmassage, 60 min</option>
                                     <option>Klassisk Helkroppsmassage, 90 min</option>
                                     <option>Rygg- & nackmassage, 30 min</option>
                                     <option>Rygg- & nackmassage, 45 min</option>
                                 </optgroup>
-
                                 <optgroup label="Ansiktsbehandling">
-                                    <option>Arctic Ritual</option>
-                                    <option>Deep Detox</option>
-                                    <option>Hydra Boost</option>
-                                    <option>Nordic Glow</option>
-                                    <option>Pure Calm</option>
-                                    <option>Timeless Beauty</option>
+                                    <option>Arctic Ritual, 80 min</option>
+                                    <option>Deep Detox, 70 min</option>
+                                    <option>Hydra Boost, 75 min</option>
+                                    <option>Nordic Glow, 60 min</option>
+                                    <option>Pure Calm, 50 min</option>
+                                    <option>Timeless Beauty, 75 min</option>
                                 </optgroup>
                             </select>
                         </div>
@@ -198,22 +213,28 @@
 
                             <select name="package">
                                 <option value="" selected>Välj ett alternativ</option>
+                                <optgroup label="Aktuella erbjudanden">
+                                    <option>Sunday Reset – 2 för 1</option>
+                                    <option>Mindful Detox</option>
+                                    <option>Spa & Sip</option>
+                                </optgroup>
 
-                                <optgroup label="Dagspaket">
+                                <optgroup label="Dagsspa">
                                     <option>Morning Glow</option>
                                     <option>Lunch Break</option>
                                     <option>Evening Serenity</option>
                                     <option>After Work Spa</option>
+                                    <option>Spaentré</option>
                                 </optgroup>
 
-                                <optgroup label="Boendepaket">
+                                <optgroup label="Spa med övernattning">
                                     <option>Sunday Reset</option>
                                     <option>Calm Spa Weekend</option>
                                     <option>Nordic Silence</option>
                                     <option>Harmony for Two</option>
                                     <option>Spa & Retreat Deluxe</option>
-
                                 </optgroup>
+
                                 <optgroup label="För företag">
                                     <option>Dagspaket</option>
                                     <option>Konferens & Spa</option>
@@ -222,6 +243,40 @@
                                 </optgroup>
                             </select>
                         </div>
+
+
+
+
+
+                        <div class="form-section extra">
+                            <label for="extra" id="extra-heading">Välj tillval:</label>
+                            <select name="extra" id="extra">
+                                <option value="" selected>Välj ett tillval</option>
+                                <optgroup label="Lyxpaket">
+                                    <option>Bubbel & praliner på rummet – 350 SEK</option>
+                                    <option>Frukost på rummet – 200 SEK</option>
+                                    <option>Rosbukett på rummet – 250 SEK</option>
+                                </optgroup>
+
+                                <optgroup label="Wellness & Spa">
+                                    <option>Massage på rummet, 45 min – 500 SEK</option>
+                                    <option>Spa-kit med badsalt och oljor – 150 SEK</option>
+                                    <option>Aromaterapi-kit på rummet –180 SEK</option>
+                                </optgroup>
+
+                                <optgroup label="Praktiska tillval">
+                                    <option>Sen utcheckning – 150 SEK</option>
+                                    <option>Extra säng / Barnsäng – 0 SEK</option>
+                                    <option>Parkering i garage – 150 SEK / dygn</option>
+                                </optgroup>
+
+
+                            </select>
+                        </div>
+
+
+
+
                     </div>
 
                     <div class="message">
@@ -236,18 +291,18 @@
     </main>
 
     <!-- ==================== FOOTER ==================== -->
-           <footer>
+    <footer>
         <div class="footer-content">
             <div class="footer-navigation">
                 <h3>Snabblänkar</h3>
                 <ul class="footer-nav">
-                    <li><a href="index.html">Hem</a></li>
-                    <li><a href="offers.html">Erbjudanden / Paket</a></li>
-                    <li><a href="spa.html">Spa & Relax</a></li>
+                    <li><a href="../index.html">Hem</a></li>
+                    <li><a href="../offers.html">Erbjudanden / Paket</a></li>
+                    <li><a href="../spa/spa.html">Spa & Relax</a></li>
                     <li><a href="hotel.html" class="active">Hotell</a></li>
-                    <li><a href="restaurant.html">Restaurang</a></li>
-                    <li><a href="book.html">Boka nu</a></li>
-                    <li><a href="contact.html">Kontakt & FAQ</a></li>
+                    <li><a href="../restaurant.html">Restaurang</a></li>
+                    <li><a href="../book.html">Boka nu</a></li>
+                    <li><a href="../contact.html">Kontakt & FAQ</a></li>
                 </ul>
             </div>
             <div class="footer-info">
@@ -256,15 +311,15 @@
                 <p>E-post: info@nordiccalmspa.se</p>
                 <p>Adress: Tallgläntan 3, 791 92 Falun</p>
                 <div class="socials">
-                <a href="https://www.facebook.com" target="_blank">
-                <i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
-                <a href="https://www.instagram.com" target="_blank">
-                <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.linkedin.com" target="_blank">
-                <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
-                </a>
-            </div>
+                    <a href="https://www.facebook.com" target="_blank">
+                        <i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank">
+                        <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
+                    </a>
+                </div>
                 <p><strong>Öppettider</strong></p>
                 <p>Hotell/reception: 06:00–00:00</p>
                 <p>Spa & Relax: 07:00–22:00</p>
@@ -282,12 +337,12 @@
             </div>
         </div>
         <div class="footer-end">
-        © 2025 Nordic Calm Spa
-    </div>
+            © 2025 Nordic Calm Spa
+        </div>
         <div class="transition">
-            <a href="rapport/rapport.html" target="_blank">Projektrapport</a>
-      
-    </div>
+            <a href="../rapport/rapport.html" target="_blank">Projektrapport</a>
+
+        </div>
     </footer>
 </body>
 
