--- a/offers.html
+++ b/offers.html
@@ -28,20 +28,20 @@
                     <li><a href="index.html">Hem</a></li>
                     <li><a href="offers.html" class="active">Erbjudanden & Paket</a>
                     </li>
-                    <li><a href="spa.html">Spa & Relax</a>
+                    <li><a href="spa/spa.html">Spa & Relax</a>
                         <ul class="local-nav-toggle">
-                        <li><a href="spa/bath.html">Bad & Bastu</a></li>
-                    <li><a href="spa/relax.html">Relaxavdelning</a></li>
-                    <li><a href="spa/treatments.html">Behandlingar</a></li>
-                </ul>
-            </li>
+                            <li><a href="spa/bath.html">Bad & Bastu</a></li>
+                            <li><a href="spa/relax.html">Relaxavdelning</a></li>
+                            <li><a href="spa/treatments.html">Behandlingar</a></li>
+                        </ul>
+                    </li>
                 </ul>
 
                 <a href="index.html" class="logo-link">
                     <img src="img/logo.png" alt="Nordic Calm Spa logo" class="logo">
                 </a>
                 <ul class="nav-right">
-                    <li><a href="hotel.html">Hotell</a>
+                    <li><a href="hotel/hotel.html">Hotell</a>
                     </li>
                     <li><a href="restaurant.html">Restaurang</a></li>
                     <li><a href="book.html">Boka nu</a></li>
@@ -79,38 +79,38 @@
             <h2>Våra mest bokade paket</h2>
             <div class="cards popular">
                 <article>
-                    <div class="img-wrapper">
-                        <a href="#harmony-for-two">
+                    <a href="#harmony-for-two">
+                        <div class="img-wrapper">
                             <img src="img/card-harmony-for-two.jpeg" alt="En brasa, ett bord med chark och vin. I förgrunden skymtas ett par i ofokus på var sida av bilden.">
                             <div class="text-overlay">
                                 <h3>Harmony for Two</h3>
                                 <p>Romantik för två – vårt mest uppskattade paket.</p>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                 </article>
 
                 <article>
-                    <div class="img-wrapper">
-                        <a href="#evening-serenity">
+                    <a href="#evening-serenity">
+                        <div class="img-wrapper">
                             <img src="img/card-evening-serenity.jpeg" alt="En tallrik med mat som ställs fram på ett bord.">
                             <div class="text-overlay">
                                 <h3>Evening Serenity</h3>
                                 <p>Spa, middag och stillhet i kvällsljus..</p>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                 </article>
                 <article>
-                    <div class="img-wrapper">
-                        <a href="#calm-spa-weekend">
+                    <a href="#calm-spa-weekend">
+                        <div class="img-wrapper">
                             <img src="img/card-calm-spa-weekend.jpeg" alt="En kvinna bakifrån som sitter i en pool med armbågarna upp på kanten.">
                             <div class="text-overlay">
                                 <h3>Calm Spa Weekend</h3>
                                 <p>Två dagar av total ro och njutning.</p>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                 </article>
             </div>
         </section>
@@ -118,70 +118,49 @@
         <section class="highlights" id="offers">
             <h2>Aktuella erbjudanden</h2>
             <div class="cards offers">
-                <article id="offers-now">
+                <article>
+                                       <a href="#sunday-reset">
                     <div class="img-wrapper">
                         <img src="img/card-sunday-reset.jpeg" alt="En kvinna som ligger på magen i en säng med fluffiga, vita sängklder.">
-                        <img src="img/2-for-1.png" alt="En ring med texten 2 för 1 inuti." class="stamp">
+                        <img src="img/2-for-1.png" alt="En ring med texten '2 för 1' inuti." class="stamp-left">
                         <div class="text-overlay">
                             <h3>Sunday Reset – 2 för 1</h3>
                             <p>Låt söndagen bli din dag för återhämtning.</p>
                         </div>
                     </div>
-                    <ul class="including">
-                        <li>Kom 2, betala för 1</li>
-                        <li>En övernattning med frukostbuffé</li>
-                        <li>Tillgång till spa kl. 15:00–19:00</li>
-                        <li>Kvällste och snacks i relaxen</li>
-                    </ul>
-                    <div class="price-booking">
-                        <p>Från 1 195 SEK / 2 personer</p>
-                        <a href="book.html">Boka här</a>
-                    </div>
+                    </a>
                 </article>
 
                 <article>
+                    <a href="#mindful-detox">
                     <div class="img-wrapper">
                         <img src="img/card-mindful-detox.jpeg" alt="Ett glas med grön smoothie omgivet av kiwi och bladspenat.">
+                        <img src="img/just-nu.png" alt="En ring med 'just nu' inuti." class="stamp-right">
                         <div class="text-overlay">
                             <h3>Mindful Detox</h3>
                             <p>Förnya hud och själ med vårt detoxpaket som ger både energi och glow.</p>
                         </div>
                     </div>
-                    <ul class="including">
-                        <li>30 min kroppsskrubb</li>
-                        <li>45 min massage med eteriska oljor</li>
-                        <li>Detox-smoothie</li>
-                        <li>Tillgång till spa kl. 10:00–14:00</li>
-                    </ul>
-                    <div class="price-booking">
-                        <p>Från 1 195 SEK / person</p>
-                        <a href="book.html">Boka här</a>
-                    </div>
+                </a>
                 </article>
 
                 <article>
+                    <a href="#spa-sip">
                     <div class="img-wrapper">
                         <img src="img/card-spa-sip.jpeg" alt="Ett glas med bubbel som hälls upp.">
+                        <img src="img/just-nu.png" alt="En ring med texten 'just nu ' inuti." class="stamp-right">
                         <div class="text-overlay">
-                        <h3>Spa & Sip</h3>
-                        <p>Unna dig en eftermiddag med bubbel och spa. Perfekt för kompisgäng eller par som vill fira något litet, eller bara skämma bort sig själva.</p>
+                            <h3>Spa & Sip</h3>
+                            <p>Unna dig en eftermiddag med bubbel och spa. Perfekt för kompisgäng eller par som vill fira något litet, eller bara skämma bort sig själva.</p>
                         </div>
                     </div>
-                    <ul class="including">
-                        <li>En flaska mousserande / 2 personer</li>
-                        <li>Fruktbricka</li>
-                        <li>Tillgång till spa kl. 16:00–20:00</li>
-                    </ul>
-                    <div class="price-booking">
-                        <p>Från 795 SEK / person</p>
-                        <a href="book.html">Boka här</a>
-                    </div>
+                </a>
                 </article>
             </div>
         </section>
 
-        <section class="highlights" id="day">
-            <h2>Spa utan övernattning</h2>
+        <section class="highlights day" id="day">
+            <h2>Dagsspa</h2>
             <div class="cards packages">
 
                 <article id="morning-glow">
@@ -241,25 +220,65 @@
                     </div>
                 </article>
 
-                                <article id="spa-entrance">
-                    <img src="img/card-spa-entrance.jpeg" alt="En modern bastu i trä, med ett stenfyllt aggregat i centrum.">
-                    <h3>Spaentré</h3>
-                    <p>För dig som endast vill njuta av spa- och relaxavdelningen – koppla av i varma bad, bastu och relaxytor, och låt stillheten omsluta dig för en stund.</p>
+                <article id="mindful-detox">
+                    <div class="img-wrapper-day">
+                    <img src="img/card-mindful-detox.jpeg" alt="Ett glas med grön smoothie omgivet av kiwi och bladspenat.">
+                                        <img src="img/just-nu.png" alt="En ring med texten 'just nu ' inuti." class="stamp-right">
+                    <h3>Mindful Detox</h3>
+                    <p>Förnya hud och själ med vårt detoxpaket som ger både energi och glow.</p>
+                </div>
                     <ul class="including">
-                        <li>Tillgång till 4 timmars spa</li>
+                        <li>30 min kroppsskrubb</li>
+                        <li>45 min massage med eteriska oljor</li>
+                        <li>Detox-smoothie</li>
+                        <li>Tillgång till spa kl. 10:00–14:00</li>
                     </ul>
                     <div class="price-booking">
-                        <p>Från 595 SEK / person</p>
+                        <p>Från 1 195 SEK / person</p>
                         <a href="book.html">Boka här</a>
                     </div>
                 </article>
+
+
+                <article id="spa-sip">
+                    <div class="img-wrapper-day">
+                    <img src="img/card-spa-sip.jpeg" alt="Ett glas med bubbel som hälls upp.">
+                    <img src="img/just-nu.png" alt="En ring med texten 'just nu ' inuti." class="stamp-right">
+                    <h3>Spa & Sip</h3>
+                    <p>Unna dig en eftermiddag med bubbel och spa. Perfekt för kompisgäng eller par som vill fira något litet, eller bara skämma bort sig själva.</p>
+            </div>
+            <ul class="including">
+                <li>En flaska mousserande / 2 personer</li>
+                <li>Fruktbricka</li>
+                <li>Tillgång till spa kl. 16:00–20:00</li>
+            </ul>
+            <div class="price-booking">
+                <p>Från 795 SEK / person</p>
+                <a href="book.html">Boka här</a>
+            </div>
+            </article>
+
+            <article id="spa-entrance">
+                <img src="img/card-spa-entrance.jpeg" alt="En modern bastu i trä, med ett stenfyllt aggregat i centrum.">
+                <h3>Spaentré</h3>
+                <p>För dig som endast vill njuta av spa- och relaxavdelningen – koppla av i varma bad, bastu och relaxytor, och låt stillheten omsluta dig för en stund.</p>
+                <ul class="including">
+                    <li>Tillgång till 4 timmars spa</li>
+                </ul>
+                <div class="price-booking">
+                    <p>Från 595 SEK / person</p>
+                    <a href="book.html">Boka här</a>
+                </div>
+            </article>
+
+
             </div>
             <p class="sidenote">* Lån av badrock, tofflor och handduk ingår i alla paket.</p>
         </section>
 
-        <section class="highlights" id="stay">
+        <section class="highlights stay" id="stay">
             <h2>Spa med övernattning</h2>
-            <div class="cards packages">
+            <div class="cards stay">
                 <article id="sunday-reset">
                     <img src="img/card-sunday-reset.jpeg" alt="En kvinna som ligger på magen i en säng med fluffiga, vita sängklder.">
                     <h3>Sunday Reset</h3>
@@ -387,15 +406,15 @@
     </main>
 
     <!-- ==================== FOOTER ==================== -->
-          <footer>
+    <footer>
         <div class="footer-content">
             <div class="footer-navigation">
                 <h3>Snabblänkar</h3>
                 <ul class="footer-nav">
                     <li><a href="index.html">Hem</a></li>
                     <li><a href="offers.html" class="active">Erbjudanden / Paket</a></li>
-                    <li><a href="spa.html">Spa & Relax</a></li>
-                    <li><a href="hotel.html">Hotell</a></li>
+                    <li><a href="spa/spa.html">Spa & Relax</a></li>
+                    <li><a href="hotel/hotel.html">Hotell</a></li>
                     <li><a href="restaurant.html">Restaurang</a></li>
                     <li><a href="book.html">Boka nu</a></li>
                     <li><a href="contact.html">Kontakt & FAQ</a></li>
@@ -407,15 +426,15 @@
                 <p>E-post: info@nordiccalmspa.se</p>
                 <p>Adress: Tallgläntan 3, 791 92 Falun</p>
                 <div class="socials">
-                <a href="https://www.facebook.com" target="_blank">
-                <i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
-                <a href="https://www.instagram.com" target="_blank">
-                <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.linkedin.com" target="_blank">
-                <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
-                </a>
-            </div>
+                    <a href="https://www.facebook.com" target="_blank">
+                        <i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank">
+                        <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
+                    </a>
+                </div>
                 <p><strong>Öppettider</strong></p>
                 <p>Hotell/reception: 06:00–00:00</p>
                 <p>Spa & Relax: 07:00–22:00</p>
@@ -433,12 +452,12 @@
             </div>
         </div>
         <div class="footer-end">
-        © 2025 Nordic Calm Spa
-    </div>
+            © 2025 Nordic Calm Spa
+        </div>
         <div class="transition">
             <a href="rapport/rapport.html" target="_blank">Projektrapport</a>
-      
-    </div>
+
+        </div>
     </footer>
 </body>
 
